# USBM-RELAY

./: CMakeLists.txt
example/: relaycontrol.cpp
include/: usbmrelay.hpp  usbrelay.hpp
src/: serialib.cpp  usbmrelay.cpp  usbrelay.cpp
